--- a/ReadMe
+++ b/ReadMe
@@ -7,6 +7,6 @@
 
 result จาก การ query ข้อมูล ที่ต้องการ ควรจะได้ดังรูปภาพข้างล่างนี้
 
-<img src="https://github.com/casperstack/js-sql-test/blob/main/query.png?raw=true" width="128"/>
+![query](https://github.com/casperstack/js-sql-test/blob/main/query.png?raw=true)
 
 (จาก รูปภาพใช้ query time แค่ 0.3 ms)
